src/snapshots/alma__parser__tests__module_parser-3.snap
---
source: src/parser.rs
expression: "parse(\"module Test\\n\\na = 1\")"

---
Input:

module Test

a = 1

Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [
            Pattern(
                Node {
                    start: 13,
                    end: 14,
                    line: 3,
                    column: 0,
                    value: Identifier(
                        Node {
                            start: 13,
                            end: 14,
                            line: 3,
                            column: 0,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 2,
                                },
                            },
                        },
                    ),
                },
                Node {
                    start: 17,
                    end: 18,
                    line: 3,
                    column: 4,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Float(
                            1.0,
                        ),
                    },
                },
            ),
        ],
        type_definitions: [],
    },
    [],
)
